spacing fix

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -107,7 +107,7 @@
 
 .game1
   position: absolute
-  top: 100px
+  top: 200px
   left: 0
   width: 950px
   height: 50px
@@ -123,16 +123,18 @@
 
 .box1
   position: absolute
-  top: 200px
+  top: 300px
+  left: 0
   width: 950px
-  height: 650px
+  height: 600px
   padding: 0
 
 .box2
   position: absolute
   top: 800px
+  left: 0
   width: 950px
-  height: 650px
+  height: 600px
   padding: 0
 
 .box-row1
@@ -140,15 +142,15 @@
   top: 0
   left: 0
   width: 950px
-  height: 305px
+  height: 275px
   padding: 0
 
 .box-row2
   position: absolute
-  top: 325px
+  top: 300px
   left: 0
   width: 950px
-  height: 305px
+  height: 275px
   padding: 0
 
 .box-row1-image
@@ -169,15 +171,15 @@
   position: absolute
   top: 0
   left: 450px
-  width: 500
-  height: 250
+  width: 500px
+  height: 250px
 
 .box-row2-text
   position: absolute
   top: 0
   left: 0
-  width: 425
-  height: 250
+  width: 425px
+  height: 250px
 
 
 
